# videopi2

./: .gitignore  README.md  doorbell-hdmi.py  doorbell-luma.py  doorbell.py  feeds.json  feeds.json.template  requirements.txt  test.py  test_fb_direct.py  test_hdmi_luma.py  test_hdmi_pygame.py
doorbell-rs/: Cargo.toml  README.md
doorbell-rs/src/: main.rs
